# micracode

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-publish.yml  web-quality.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/micracode_api/: config.py  main.py  storage.py
apps/api/src/micracode_api/agents/: llm.py  model_catalog.py  orchestrator.py  patcher.py
apps/api/src/micracode_api/routers/: deploy.py  projects.py
apps/api/src/micracode_api/schemas/: project.py
apps/api/tests/: conftest.py  test_generate_cancellation.py  test_llm_factory.py  test_model_catalog.py  test_orchestrator.py  test_patcher.py  test_projects.py  test_starter.py  test_storage.py  test_storage_snapshots.py  test_stream_contract.py
apps/web/: .eslintignore  Dockerfile  next.config.ts
apps/web/src/app/: page.tsx
apps/web/src/components/chat/: ModelPicker.tsx  V0ChatInput.tsx
apps/web/src/components/editor/: EditorTopBar.tsx
apps/web/src/components/home/: CommandPrompt.tsx  HeroComposer.tsx  RecentTasksSection.tsx
apps/web/src/components/layout/: TopNav.tsx  deploy-vercel-button.tsx
apps/web/src/lib/: env.ts
apps/web/src/lib/api/: models.ts  projects.ts
apps/web/src/store/: modelStore.ts
micracode/: pyproject.toml
micracode/src/micracode/: __init__.py  cli.py  config.py  deps.py  server.py
micracode/src/micracode/routers/: generate.py  health.py  models.py  projects.py
